--- a/src/components/card-container/card-container.styles.scss
+++ b/src/components/card-container/card-container.styles.scss
@@ -1,6 +1,12 @@
-.card-container {
+.card-container-flex {
   width: 100%;
   display: flex;
   flex-wrap: wrap;
   justify-content: space-between;
+}
+.card-container-grid {
+  display: grid;
+  grid-template-columns: repeat(4, 1fr);
+  column-gap: 10px;
+  row-gap: 50px;
 }
