--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -65,4 +65,21 @@
       font-size: 16px;
     }
   }
+
+  .footer {
+    width: 100%;
+    height: 5%;
+    display: flex;
+    justify-content: space-between;
+    font-size: 18px;
+
+    .value1 {
+      width: 90%;
+      margin-bottom: 15px;
+    }
+
+    .value2 {
+      width: 10%;
+    }
+  }
 }
