--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -1,13 +1,15 @@
 .card-wrapper {
   min-width: 30%;
-  height: 240px;
+  height: 250px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  border: 1px solid black;
+  // border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
+  flex-direction: column;
+  position: relative; // new addition
 
   &:hover {
     cursor: pointer;
@@ -41,8 +43,33 @@
     background-position: center;
   }
 
+  // .card-body-container {
+  //   height: 90px;
+  //   padding: 0 25px;
+  //   display: flex;
+  //   flex-direction: column;
+  //   align-items: center;
+  //   justify-content: center;
+  //   border: 1px solid black;
+  //   background-color: white;
+  //   opacity: 0.7;
+  //   position: absolute;
+
+  //   h2 {
+  //     font-weight: bold;
+  //     margin: 0 6px 0;
+  //     font-size: 22px;
+  //     color: #4a4a4a;
+  //   }
+
+  //   p {
+  //     font-weight: lighter;
+  //     font-size: 16px;
+  //   }
+  // }
+
   .card-body-container {
-    height: 90px;
+    height: 20%;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
@@ -68,16 +95,16 @@
 
   .footer {
     width: 100%;
-    height: 5%;
+    height: 25px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
-
+  
     .value1 {
       width: 90%;
       margin-bottom: 15px;
     }
-
+  
     .value2 {
       width: 10%;
     }
