--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -1,15 +1,14 @@
 .card-wrapper {
   min-width: 30%;
-  height: 250px;
+  height: 240px;
   flex: 1 1 auto;
   display: flex;
   align-items: center;
   justify-content: center;
-  // border: 1px solid black;
+  border: 1px solid black;
   margin: 0 7.5px 15px;
   overflow: hidden;
   flex-direction: column;
-  position: relative; // new addition
 
   &:hover {
     cursor: pointer;
@@ -43,33 +42,8 @@
     background-position: center;
   }
 
-  // .card-body-container {
-  //   height: 90px;
-  //   padding: 0 25px;
-  //   display: flex;
-  //   flex-direction: column;
-  //   align-items: center;
-  //   justify-content: center;
-  //   border: 1px solid black;
-  //   background-color: white;
-  //   opacity: 0.7;
-  //   position: absolute;
-
-  //   h2 {
-  //     font-weight: bold;
-  //     margin: 0 6px 0;
-  //     font-size: 22px;
-  //     color: #4a4a4a;
-  //   }
-
-  //   p {
-  //     font-weight: lighter;
-  //     font-size: 16px;
-  //   }
-  // }
-
   .card-body-container {
-    height: 20%;
+    height: 90px;
     padding: 0 25px;
     display: flex;
     flex-direction: column;
@@ -93,13 +67,29 @@
     }
   }
 
+  // card body container size
+  .small {
+    height: 45px;
+
+    h2 {
+      font-weight: lighter;
+      font-size: 16px;
+    }
+  }
+
+  // overlay position
+  .bottom {
+    margin-top: 5%;
+  }
+
+  // card footer
   .footer {
     width: 100%;
     height: 25px;
     display: flex;
     justify-content: space-between;
     font-size: 18px;
-  
+
     .value1 {
       width: 90%;
       margin-bottom: 15px;
