--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -18,8 +18,19 @@
       transition: transform 6s cubic-bezier(0.25, 0.45, 0.45, 0.95);
     }
 
-    & .card-body-container {
+    & .card-body-container-with-overlay {
       opacity: 0.9;
+    }
+
+    & .card-body-container-without-overlay {
+      display: flex;
+      opacity: 0.9;
+
+      &:hover {
+        background-color: black;
+        color: white;
+        border: none;
+      }
     }
   }
 
@@ -43,10 +54,22 @@
     background-position: center;
   }
 
-  .card-body-container {
+  h2 {
+    font-weight: bold;
+    margin: 0 6px 0;
+    font-size: 22px;
+    color: #4a4a4a;
+  }
+
+  p {
+    font-weight: lighter;
+    font-size: 16px;
+  }
+
+  .card-body-container-with-overlay {
     height: 90px;
     padding: 0 25px;
-    display: flex; // displaying card container by default. Additional prop showOverlayOnHover determines if we want to only show this on hover
+    display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
@@ -54,21 +77,19 @@
     background-color: white;
     opacity: 0.7;
     position: absolute;
-
-    h2 {
-      font-weight: bold;
-      margin: 0 6px 0;
-      font-size: 22px;
-      color: #4a4a4a;
-    }
-
-    p {
-      font-weight: lighter;
-      font-size: 16px;
-    }
   }
 
-  .showOverlayOnHover {
+  .card-body-container-without-overlay {
+    height: 90px;
+    padding: 0 25px;
+    display: none;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    border: 1px solid black;
+    background-color: white;
+    opacity: 0.7;
+    position: absolute;
   }
 
   // card body container size
