Minor component adjustments and proptypes

--- a/src/components/card/card.styles.scss
+++ b/src/components/card/card.styles.scss
@@ -28,8 +28,15 @@
 
       &:hover {
         background-color: black;
-        color: white;
         border: none;
+
+        & h2 {
+          color: white;
+        }
+
+        & p {
+          color: white;
+        }
       }
     }
   }
